  when only database header was modified (-o, -b, -p switches).
- adding dar_manager database format version information with -l option
- fixed libdar inability to read dar_manager's database format version 4
- adapting code to build under cygwin environment, where thread_local seems
  broken
- fixed output to stderr in place of stdout for Licensing information

from 2.4.x to 2.5.0
- added support for posix_fadvise()
- added entrepot class hierarchy to support in the future other storage
  types than local filesystem for slices
- API: added access to the entrepot through the API
- modified class hash_fichier for it becomes entrepot independent
- API: extended libdar API with an additional and more simple way to read
  an archive: archive::get_children_in_table() method, see
  doc/API_tutorial.html for details
- added support for extX (see lsattr(1)) and HFS+ (birthtime date)
  Filesystem Specific Attributes (FSA).
- dar is now able to skip backward when a file is found to be "dirty" at
  backup time. This avoids wasting space in archive but is only possible if
  the backward position is located in the current slice and no slice
  hashing nor strong encryption is used. Of course if the archive is
  written to a pipe or to stdout, skipping back to retry saving data at the
  same place is neither possible, --retry-on-change option stays possible
  in that cases at the cost of data duplication (wasted bytes amount, see
  --retry-on-change man page).
- by default dar now performs up to 3 retries but do not allow for wasting
  bytes if file has changed at the time it was read for backup,
  this can be modied using --retry-on-change option.
- With the same constraints as for a changing file, if a file is saved
  compressed but its compressed data uses more space than uncompressed,
  the file's data is resaved as uncompressed. However, if skipping backward
  is not possible, data is kept compressed.
- if system provides it, dar uses "Linux capabilities" to check for the