@@ -12,6 +12,7 @@ from 2.5.0 to 2.5.1
 - adapting code to build under cygwin environment, where thread_local seems
   broken
 - fixed output to stderr in place of stdout for Licensing information
+- fixed bug met when permission is denied while reading or writing slices
 
 from 2.4.x to 2.5.0
 - added support for posix_fadvise()
